<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/functionPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        tools:layout_editor_absoluteX="444dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        tools:layout_editor_absoluteX="563dp"
        tools:layout_editor_absoluteY="0dp" />

    <!--Horizontal Guidelines-->
    <android.support.constraint.Guideline
        android:id="@+id/guidelineHorizontal05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHorizontal35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="109dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineHorizontal95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="296dp" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#058DF8"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal95"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal05" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@android:color/white"
        android:gravity="right|top"
        android:maxLines="1"
        android:padding="15dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_clear"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal35"
        app:layout_constraintLeft_toRightOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal05" />

    <Button
        android:id="@+id/btn_clear"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="185dp"
        android:layout_height="46dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@+id/btn_divide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintTop_toTopOf="@+id/btn_divide"
        app:layout_constraintVertical_bias="1.0" />



    <Button
        android:id="@+id/btn_divide"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/btn_nine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75" />

    <Button
        android:id="@+id/btn_multiplication"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiplication"
        app:layout_constraintBottom_toBottomOf="@+id/btn_divide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical75"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toTopOf="@+id/btn_divide"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_seven"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintBottom_toBottomOf="@+id/btn_eight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintTop_toTopOf="@+id/btn_eight"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_eight"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintBottom_toBottomOf="@+id/btn_nine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/btn_nine"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_nine"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/btn_six"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75" />

    <Button
        android:id="@+id/btn_minus"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_nine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical75"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toTopOf="@+id/btn_nine"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_four"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintBottom_toBottomOf="@+id/btn_five"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintTop_toTopOf="@+id/btn_five"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_five"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintBottom_toBottomOf="@+id/btn_six"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/btn_six"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_six"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/btn_three"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75" />

    <Button
        android:id="@+id/btn_plus"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_six"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical75"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toTopOf="@+id/btn_six"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_one"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="@+id/btn_two"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintTop_toTopOf="@+id/btn_two"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_two"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="@+id/btn_three"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical25"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/btn_three"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_three"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/btn_dot"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75" />

    <Button
        android:id="@+id/btn_zero"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical05"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintTop_toTopOf="@+id/btn_dot"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_dot"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal95"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical75" />

    <Button
        android:id="@+id/btn_equal"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineVertical75"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVertical95"
        app:layout_constraintTop_toTopOf="@+id/btn_three"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>